--- a/eShopSolution.Data/appsettings.json
+++ b/eShopSolution.Data/appsettings.json
@@ -1,10 +1,13 @@
 {
-    {
-        {
-            "ConnectionStrings": {
-                "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=eShopSolution;Trusted_Connection=True;MultipleActiveResultSets=true",
-                "MyConn": "Data Source=.\\SQL2014;Initial Catalog=AjaxSamples;User ID=sa;Password=admin"
-            }
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
         }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "eShopSolutionDb": "Data Source=DESKTOP-8PA8D34;Initial Catalog=eShopSolution;User ID=sa;Password=admin"
     }
 }
